Bug 79380 - Journal: missing boots
Summary: Journal: missing boots
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-28 17:49 UTC by Michael Kuhn
Modified: 2014-10-10 03:58 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
journalctl outputs to analyse the problem (3.84 KB, text/plain)
2014-07-11 19:53 UTC, Benjamin Robin
Details
journal: Fix sd_journal_enumerate_unique skipping values (10.91 KB, patch)
2014-10-08 19:02 UTC, Jan
Details | Splinter Review

Description Michael Kuhn 2014-05-28 17:49:25 UTC
journalctl --list-boots suddenly decided to stop showing my more recent boots. This sounds very similar to: http://lists.freedesktop.org/archives/systemd-devel/2014-May/019082.html

I have updated to systemd 213 today, but I am not sure if it was already broken with 212.

% journalctl -F _BOOT_ID | wc -l
258

% journalctl --list-boots | wc -l
56

(The output is correctly ordered, but stops some time in March.)

The journal is stored on ext4, so I would rule out any file system problems (the mailing list poster was using btrfs). journalctl --verify also reports all journal files as PASSing.
Comment 1 Benjamin Robin 2014-07-11 19:52:32 UTC
I have no idea if this is exactly the same bug, but it looks very similar. The version of systemd used is 214.

After a quick analyze it looks like "journalctl --list-boots" doesn't read "system.journal" but only read the files "system@xxxx.journal".
Please see the attached file with more information.
Comment 2 Benjamin Robin 2014-07-11 19:53:25 UTC
Created attachment 102642 [details]
journalctl outputs to analyse the problem
Comment 3 Jan 2014-10-08 19:02:53 UTC
Created attachment 107576 [details] [review]
journal: Fix sd_journal_enumerate_unique skipping values

Can you try this patch and see if it fixed things?
Comment 5 Zbigniew Jedrzejewski-Szmek 2014-10-10 03:58:32 UTC
Also https://bugzilla.redhat.com/show_bug.cgi?id=1095962.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.